minor dark mode fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,16 @@ body.bg-dark .navbar-light .navbar-nav .nav-item.active{
 }
 
 
+
+
+body.bg-dark .navbar-light .navbar-toggler {
+	color: white;
+	border-color: #a7a7a7;
+}
+body.bg-dark .navbar-light .navbar-toggler-icon {
+	filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(49deg) brightness(106%) contrast(101%);
+}
+
 .nav-item.active {
 	font-weight: bold;
 }
